--- a/Parker.css
+++ b/Parker.css
@@ -56,14 +56,30 @@ body
     margin-left:0px;
     margin-top: 7px;
     width: 780px;
+    display: flex;
+}
+.centernav button
+{
+    height: 46px; 
+    padding: 0;
+    background:none;
+    border: none;
+    
+}
+.centernav button:hover
+{
+    filter: invert(100%);
+    background-color: #000000;
+
 }
 .box
 {
     font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 15px;
     margin-left: 0;
-    width: 400px;
+    width: 300px;
     height: 44px;
+    border: none;
    
 }
 .first
@@ -207,14 +223,6 @@ body
     height: 200px;
     font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
-/* 
-.rights
-{
-    width: 100%;
-    height: 600px;
-    background-color: rgb(10, 160, 20);
-
-} */
 .signupcontent
 {
     width: 1000px;
@@ -486,7 +494,7 @@ body
 }
 .rights
 {
-    /* justify-content: space-between; */
+    
     display: flex;
 }
 .c1
@@ -506,13 +514,22 @@ body
 }
 .c3 
 {
-    padding-top: 20px;
-    left: 130px;
-    width: 30px;
+    margin-top: 20px;
+    border: solid 1px #000000;
+    display: flex;
+    align-items: center;
+    width: 150px;
+    height: 30px;
 }
 select
 {
+    border: none;
     height: 25px;
     width: 130px;
 
+}
+select:focus
+{
+    border: none;
+    outline: none;
 }
